# sandaq

./: .gitignore  README.md
notebooks/: checks.ipynb
notebooks/.ipynb_checkpoints/: checks-checkpoint.ipynb  example-checkpoint.ipynb  sandawpro_example-checkpoint.ipynb
sandaw/: CMakeLists.txt  main.cc  processRun.cc
sandaw/config/: config.ini  config_1720.ini  config_pmt.ini  config_zle.ini
sandaw/config/.ipynb_checkpoints/: config-checkpoint.ini  config_zle-checkpoint.ini
sandaw/inc/: Configuration.hh  EventsProcessor.hh  Ini.hh  PeaksProcessor.hh  RawDataProcessor.hh  Timer.hh  Tools.hh  Types.hh
sandaw/src/: Configuration.cc  EventsProcessor.cc  PeaksProcessor.cc  RawDataProcessor.cc
sandawpy/: __init__.py  data_type.py  loader.py  lones1.py  peaks.py  tools.py
sandawpy/.ipynb_checkpoints/: __init__-checkpoint.py  config-checkpoint.py  data_type-checkpoint.py  events-checkpoint.py  loader-checkpoint.py  peaks-checkpoint.py
scripts/: config.ini  process_run.py  process_run_mode.py
